支持加减一个空位，支持3到8人局